testsuite/poke.pkl/struct-ind-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int foo;
  };

(Foo {})->bar; /* { dg-error "" } */
